add animtion text

--- a/index.html
+++ b/index.html
@@ -15,9 +15,26 @@
     <!-- end link custom css page -->
   </head>
   <body>
-    <section>
+    <section class="container-sec">
       <div class="effect-text">
         <h2 class="text">Front End Developer</h2>
+      </div>
+
+      <div class="effect-2">
+        <h2>WordPress</h2>
+      </div>
+      <div class="effect-3">
+        <ul>
+          <li>
+            <a href="">HTML</a>
+          </li>
+          <li>
+            <a href="">CSS</a>
+          </li>
+          <li>
+            <a href="">JS</a>
+          </li>
+        </ul>
       </div>
     </section>
     <!-- import jquery -->
