--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           </li>
         </ul>
       </div>
+      <div class="effect-4">
+        <h2>Front End Developer</h2>
+      </div>
     </section>
     <!-- import jquery -->
     <script src="./assets/libs/jquery-3.7.1.js"></script>
