--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
       <div class="effect-4">
         <h2>Front End Developer</h2>
       </div>
+      <div class="container">
+        <svg viewBox="0 0 960 300">
+          <symbol id="s-text">
+            <text text-anchor="middle" x="50%" y="80%">
+              Front End Developer
+            </text>
+          </symbol>
+
+          <g class="g-ants">
+            <use xlink:href="#s-text" class="text-copy"></use>
+            <use xlink:href="#s-text" class="text-copy"></use>
+            <use xlink:href="#s-text" class="text-copy"></use>
+            <use xlink:href="#s-text" class="text-copy"></use>
+            <use xlink:href="#s-text" class="text-copy"></use>
+          </g>
+        </svg>
+      </div>
     </section>
     <!-- import jquery -->
     <script src="./assets/libs/jquery-3.7.1.js"></script>
